[package]
name = "strings-to-and-fro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
quick-xml = "0.22.0"
glob = "0.3.0"
itertools = "0.10.2"
colored = "2"
